system test for preserved source response
Signed-off-by: Aleksandar Stanchev <aleksandar.stanchev@bosch.com>